creating multi module project for system design and algo

--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.sys.design</groupId>
-  <artifactId>system.design.parent</artifactId>
+  <groupId>org.sys.algo.design</groupId>
+  <artifactId>system.design.algo.parent</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>systemdesign</name>
+  <name>system-design-algo</name>
 
   <modules>
     <module>sys-design-lld</module>
+    <module>sys-algo-dsa</module>
   </modules>
 
   <properties>
