--- a/sys-algo-dsa/pom.xml
+++ b/sys-algo-dsa/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>sys-design-lld</artifactId>
+    <artifactId>system-algo-dsa</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
