--- a/sys-design-lld/pom.xml
+++ b/sys-design-lld/pom.xml
@@ -10,5 +10,7 @@
     </parent>
 
     <artifactId>sys-design-lld</artifactId>
+    <name>system design lld</name>
+    <description>lld module for sys design</description>
 
 </project>
